[gd_scene load_steps=7 format=3 uid="uid://c4o81j1i13igq"]

[ext_resource type="Texture2D" uid="uid://bajkhkvd502xx" path="res://Assets/BG_DesertMountains/fondiu.jpg" id="1_mb63o"]
[ext_resource type="Script" uid="uid://b6m0nr4nhdfmf" path="res://UI/menu_principal.gd" id="1_x51cq"]
[ext_resource type="Texture2D" uid="uid://2cc5bw57blfi" path="res://Assets/kenney_ui-pack-rpg-expansion/PNG/buttonLong_beige.png" id="3_84xku"]
[ext_resource type="FontFile" uid="uid://ckjnwdyjcuv2b" path="res://Fonts/PressStart2P-Regular.ttf" id="3_gtjvn"]
[ext_resource type="PackedScene" uid="uid://cg4q604cs3ssn" path="res://Elementos Varios/Título.tscn" id="4_1uu8i"]
[ext_resource type="AudioStream" uid="uid://cu36dlelmoj0q" path="res://Music/Apotos (Day) - Sonic Unleashed [OST].mp3" id="4_gtjvn"]

[node name="Menu_Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x51cq")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mb63o")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -228.0
offset_right = 149.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 45
alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer"]
z_index = 1
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_84xku")

[node name="play" type="Button" parent="TextureRect/VBoxContainer/TextureRect"]
z_index = 15
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gtjvn")
theme_override_font_sizes/font_size = 40
text = "PLAY"
flat = true

[node name="TextureRect2" type="TextureRect" parent="TextureRect/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_84xku")

[node name="settings" type="Button" parent="TextureRect/VBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gtjvn")
theme_override_font_sizes/font_size = 40
text = "SETTINGS"
flat = true

[node name="TextureRect3" type="TextureRect" parent="TextureRect/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_84xku")

[node name="quit" type="Button" parent="TextureRect/VBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gtjvn")
theme_override_font_sizes/font_size = 40
text = "QUIT"
flat = true

[node name="Títulos" parent="TextureRect" instance=ExtResource("4_1uu8i")]
z_index = 1
layout_mode = 1
offset_top = 8.0
offset_bottom = -696.0

[node name="título" type="Label" parent="TextureRect/Títulos"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_top = 136.0
offset_right = 576.0
offset_bottom = 313.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.754318, 0.033367, 0.200589, 1)
theme_override_colors/font_shadow_color = Color(0.409125, 0.11163, 0.0894664, 1)
theme_override_constants/paragraph_spacing = -20
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_gtjvn")
theme_override_font_sizes/font_size = 70
text = "PELADIN JOURNEY

-DEMO EDITION-"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gtjvn")
volume_db = -30.0
autoplay = true

[connection signal="pressed" from="TextureRect/VBoxContainer/TextureRect/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/TextureRect2/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/TextureRect3/quit" to="." method="_on_quit_pressed"]
